--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,34 +16,34 @@ jdbc.password=haizhi@)3
 ################################################
 #############spider config
 ## cluster name =crawler_cluster
-spider.cluster.name=crawler_cluster_test
-spider.cluster.enable=no
-spider.cluster.trafficTimeout=10000
+crawler.cluster.name=crawler_cluster_test
+crawler.cluster.enable=no
+crawler.cluster.trafficTimeout=10000
 ## node config
-spider.node.name=test
-spider.node.host=127.0.0.1
-spider.node.trafficPort=8180
+crawler.node.name=test
+crawler.node.host=127.0.0.1
+crawler.node.trafficPort=8180
 
 #
-spider.master.systemjob.cronTrigger=0 0 1 * * ? *
-spider.master.systemjob.clearBeforeDays=7
+crawler.master.systemjob.cronTrigger=0 0 1 * * ? *
+crawler.master.systemjob.clearBeforeDays=7
 #node.ssh.user=
 #node.ssh.passwd=
 ## job and worker config
-spider.job.wait.size=1000
-spider.worker.running.max.size=10
-spider.chrome.binary=
+crawler.job.wait.size=1000
+crawler.worker.running.max.size=10
+crawler.chrome.binary=
 ##reids config 
-spider.redis.host=172.18.180.224:6379
-spider.redis.password=haizhi@)
-spider.redis.timeout=1000
-spider.redis.lock.timeout=60
+crawler.redis.host=172.18.180.224:6379
+crawler.redis.password=haizhi@)
+crawler.redis.timeout=1000
+crawler.redis.lock.timeout=60
 #admin mails
-spider.email.host=
-spider.email.post=
-spider.email.user=
-spider.email.pwd=
-spider.email.admin=
+crawler.email.host=
+crawler.email.post=
+crawler.email.user=
+crawler.email.pwd=
+crawler.email.admin=
 ##url of test httpProxy valid
-spider.httpProxy.test.url=http://www.baidu.com
-spider.zookeeper.host=192.168.1.101:6379
+crawler.httpProxy.test.url=http://www.baidu.com
+crawler.zookeeper.host=192.168.1.101:6379
